- Summary: Code refactoring according to the results of running FindBugs.
 - Bugzilla Bug (s) Resolved:

 - Description:
Fixed performance issues in chart side(exclude chart.engine plugin).

- Tests Description:  Manual Test

- Notes to Build Team: N/A

- Notes to Developers: N/A

- Notes to QA:  N/A

- Notes to Documentation:  N/A

- Files Edited:


- Files Added:


- Files Deleted