@@ -164,7 +164,7 @@ public class ChartImageManager
 			idr = ChartEngine.instance( ).getRenderer( "dv." //$NON-NLS-1$
 					+ sExtension.toUpperCase( Locale.US ) );
 
-			idr.setProperty( IDeviceRenderer.DPI_RESOLUTION, new Integer( dpi ) );
+			idr.setProperty( IDeviceRenderer.DPI_RESOLUTION, Integer.valueOf( dpi ) );
 
 			if ( "SVG".equalsIgnoreCase( sExtension ) ) //$NON-NLS-1$
 			{
